[package]
name = "todo-worker"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.9"
serde_json = "1.0"
serde_cbor = "0.11.2"
icalendar = { version = "0.13.1", features = ["parser"] }
getrandom = { version = "0.2", features = ["js"] }
regex = "1"
phf = { version = "0.11", default-features = false, features = ["macros"] }
serde = "1.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["serde", "wasmbind"]

[patch.crates-io]
icalendar = { path = "icalendar-rs" }


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
